fix(ci): resolve build failures in release workflow
- Update pyo3 dependency to 0.22 to support Python 3.13.

- Add .netrc workaround for linux build in maturin-action.

- Update Cargo.lock.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,9 @@ jobs:
         run: |
           git config --global url."https://${{ secrets.SSO_ENABLED_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
+      - name: Create dummy .netrc
+        run: touch ~/.netrc
+
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
