--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,21 +33,19 @@ jobs:
         run: |
           git config --global url."https://${{ secrets.SSO_ENABLED_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
-      - name: Create dummy .netrc
-        run: touch ~/.netrc
-
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --interpreter python3.12
-          sccache: 'true'
+          sccache: 'false'
           manylinux: ${{ matrix.target == 'aarch64' && '2_28' || 'auto' }}
           before-script-linux: |
             git config --global url."https://${{ secrets.SSO_ENABLED_TOKEN }}@github.com/".insteadOf "https://github.com/"
         env:
           CARGO_NET_GIT_FETCH_WITH_CLI: true
           PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
+          DOCKER_NETRC_PATH: /dev/null
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -79,7 +77,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --interpreter python3.12
-          sccache: 'true'
+          sccache: 'false'
         env:
           CARGO_NET_GIT_FETCH_WITH_CLI: true
           GITHUB_TOKEN: ${{ secrets.SSO_ENABLED_TOKEN }}
@@ -122,7 +120,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --interpreter python3.12
-          sccache: 'true'
+          sccache: 'false'
         env:
           CARGO_NET_GIT_FETCH_WITH_CLI: true
           GITHUB_TOKEN: ${{ secrets.SSO_ENABLED_TOKEN }}
